# pca-scaffold

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_suggestion.md
.github/workflows/: check_code_quality.yml  dev.yml  publish.yml  publish_distribution.yml  publish_docs.yml  release.yml
console_script_setup/: index.html
contributing/: index.html
docs/: console_script_setup.md  contributing.md  faq.md  history.md  pypi_release_checklist.md  tutorial.md
faq/: index.html
history/: index.html
hooks/: post_gen_project.py  pre_gen_project.py
prompts/: index.html
pypi_release_checklist/: index.html
scripts/: recursive-rename.sh  rename-tag.sh
search/: search_index.json
tests/: test_bake_project.py
travis_pypi_setup/: index.html
troubleshooting/: index.html
tutorial/: index.html
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .editorconfig  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  cookiecutter.json  makefile  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/.github/: commit_message_template.md  pull_request_template.md
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_suggestion.md
{{cookiecutter.project_slug}}/.github/workflows/: check_code_security.yml  dev.yml  preview.yml  publish_distribution.yml  release.yml
{{cookiecutter.project_slug}}/docs/: api.md  usage.md
{{cookiecutter.project_slug}}/tests/: test_cli.py  test_init.py  test_{{cookiecutter.package_name}}.py  test_{{cookiecutter.pkg_name}}.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py
