[tool]
[tool.poetry]
name = "pca-scaffold"
version = "0.1.0"
description = "Scaffolding library for a python-clean-architecture package"
license = "BSD-3-Clause"
authors = ["Łukasz Haze <github@lhaze.name>"]
readme = "README.md"
repository = "https://github.com/pcah/pca-scaffold"
documentation = "https://pcah.github.io/pca-scaffold/"
keywords = [
  'cookiecutter',
  'package',
  'pca',
  'python-clean-architecture',
  'template',
]

include = [
  '{{cookiecutter.project_slug}}/**/*',
  'cookiecutter.json',
  'hooks/*'
]

[tool.poetry.dependencies]
python = ">=3.7.*"
cookiecutter = "1.7.2"

pytest = {version = "^6.2.3", optional=true}
pytest-cookies = {version = "^0.6.1", optional=true}
pyyaml = {version="^5.3.1",optional=true}
mkdocs = {version="^1.1.2",optional=true}
mkdocs-material = {version="^6.1.7",optional=true}
mkdocs-material-extensions = {version="^1.0.1",optional=true}
pytest-cov = {version="^2.10.1",optional=true}
tox = {version = "^3.20.1", optional=true}
mkdocs-include-markdown-plugin = {version = "^2.8.0", optional=true}
click = {version = "^8.0.1", optional = true}

[tool.poetry.extras]
dev = [
  "pytest",
  "pytest-cookies",
  "pyyaml",
  "mkdocs",
  "mkdocs-material",
  "mkdocs-material-extensions",
  "pytest-cov",
  "tox",
  "mkdocs-include-markdown-plugin",
  "click"
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
