[tool]
[tool.poetry]
name = "pca-scaffold"
version = "0.1.0"
description = "Scaffolding library for a python-clean-architecture package"
license = "BSD-3-Clause"
authors = ["Łukasz Haze <github@lhaze.name>"]
readme = "README.md"
repository = "https://github.com/pcah/pca-scaffold"
documentation = "https://pcah.github.io/pca-scaffold/"
keywords = [
  'cookiecutter',
  'package',
  'pca',
  'python-clean-architecture',
  'template',
]

include = [
  '{{cookiecutter.project_slug}}/**/*',
  'cookiecutter.json',
  'hooks/*'
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
cookiecutter = "^1.7.3"
urllib3 = "^1.26.9"

click = {version = "^8.1.3", optional = true}
mkdocs = {version="^1.3.0",optional=true}
mkdocs-include-markdown-plugin = {version = "^3.3.0", optional=true}
mkdocs-material = {version="^8.2.13",optional=true}
mkdocs-material-extensions = {version="^1.0.3",optional=true}
pdbpp = {version = "^0.10.3", optional = true}
pytest = {version = "^7.1.2", optional=true}
pytest-cookies = {version = "^0.6.1", optional=true}
pytest-cov = {version="^3.0.0",optional=true}
pyyaml = {version="^6.0.0",optional=true}
tox = {version = "^3.25.0", optional=true}

[tool.poetry.extras]
dev = [
  "click",
  "mkdocs",
  "mkdocs-include-markdown-plugin",
  "mkdocs-material",
  "mkdocs-material-extensions",
  "pdbpp",
  "pytest",
  "pytest-cookies",
  "pytest-cov",
  "pyyaml",
  "tox",
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
