{%- set license_classifiers = {
    'MIT': 'License :: OSI Approved :: MIT License',
    'BSD-3-Clause': 'License :: OSI Approved :: BSD License',
    'ISC': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache-2.0': 'License :: OSI Approved :: Apache Software License',
    'GPL-3.0-only': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} -%}
[tool]
[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
repository = "{cookiecutter.repo_url}}/"
documentation = "{{cookiecutter.docs_url}}/"
description = "{{cookiecutter.project_short_description}}."
authors = [
    "{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"
]
readme = "README.md"
{%- if cookiecutter.open_source_license in license_classifiers %}
license =  "{{ cookiecutter.open_source_license }}"
{%- endif %}
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
{%- if cookiecutter.open_source_license in license_classifiers %}
    '{{ license_classifiers[cookiecutter.open_source_license] }}',
{%- endif %}
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
packages = [
    { include = "pca" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
{%- if cookiecutter.command_line_interface|lower == 'click' %}
click = "^8.1.3"
{%- endif %}

black  = {version = "^22.3.0", optional = true}
bump2version = {version = "^1.0.1", optional = true}
flake8  = {version = "^3.9.2", optional = true}
flake8-docstrings = {version = "^1.6.0", optional = true}
flake8-typing-imports  = {version = "^1.12.0", optional = true}
isort  = {version = "^5.10.1", optional = true}
mkdocs  = {version = "^1.3.0", optional = true}
mkdocs-autorefs = {version = "^0.4.1", optional = true}
mkdocs-include-markdown-plugin  = {version = "^3.3.0", optional = true}
mkdocs-material  = {version = "^8.2.13", optional = true}
mkdocs-material-extensions  = {version = "^1.0.3", optional = true}
mkdocstrings  = {version = "^0.18.1", optional = true}
mkdocstrings-sourcelink = {version = "^0.3.2", optional = true}
{%- if cookiecutter.use_mypy == 'y' %}
mypy = {version = "^0.950", optional = true}
{%- endif %}
pip  = {version = "^22.0.4", optional = true}
pre-commit = {version = "^2.18.1", optional = true}
pytest  = {version = "^7.1.2", optional = true}
pytest-cov  = {version = "^3.0.0", optional = true}
toml = {version = "^0.10.2", optional = true}
tox  = {version = "^3.25.0", optional = true}
twine  = {version = "^4.0.0", optional = true}

[tool.poetry.extras]
test = [
    "black",
    "flake8",
    "flake8-docstrings",
    "flake8-typing-imports",
    "isort",
    {%- if cookiecutter.use_mypy == 'y' %}
    "mypy",
    {%- endif %}
    "pytest",
    "pytest-cov"
]

dev = [
    "bump2version",
    "pip",
    "pre-commit",
    "toml",
    "tox",
    "twine",
]

docs = [
    "mkdocs",
    "mkdocs-autorefs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocs-material-extension",
    "mkdocstrings",
    "mkdocstrings-sourcelink",
]

{% if cookiecutter.command_line_interface|lower == 'click' -%}
[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = '{{ cookiecutter.package_qualified_name }}.cli:main'

{% endif -%}
[tool.black]
line-length = 119
skip-string-normalization = true
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
# skip_glob = docs/conf.py

[tool.pydocstyle]
match_dir = "{{cookiecutter.package_path}}/**"
convention = "{{cookiecutter.docstrings_style}}"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
