{%- set license_classifiers = {
    "MIT": "License :: OSI Approved :: MIT License",
    "BSD-3-Clause": "License :: OSI Approved :: BSD License",
    "ISC": "License :: OSI Approved :: ISC License (ISCL)",
    "Apache-2.0": "License :: OSI Approved :: Apache Software License",
    "GPL-3.0-only": "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
} -%}
[tool]
[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}."
{%- if cookiecutter.open_source_license in license_classifiers %}
license =  "{{ cookiecutter.open_source_license }}"
{%- endif %}
authors = [
    "{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"
]
readme = "README.md"
repository = "{cookiecutter.repo_url}}/"
documentation = "{{cookiecutter.docs_url}}/"
keywords = [
    'package',
    'pca',
    'python-clean-architecture',
]
classifiers=[
{%- if cookiecutter.open_source_license in license_classifiers %}
    "{{ license_classifiers[cookiecutter.open_source_license] }}",
{%- endif %}
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
packages = [
    { include = "pca" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
{%- if cookiecutter.command_line_interface|lower == "click" %}
click = "^8.1.3"
{%- endif %}

black  = {version = "^22.3.0", optional = true}
bump2version = {version = "^1.0.1", optional = true}
flake8  = {version = "^3.9.2", optional = true}
flake8-docstrings = {version = "^1.6.0", optional = true}
flake8-typing-imports  = {version = "^1.12.0", optional = true}
isort  = {version = "^5.10.1", optional = true}
mkdocs  = {version = "^1.3.0", optional = true}
mkdocs-autorefs = {version = "^0.4.1", optional = true}
mkdocs-include-markdown-plugin  = {version = "^3.3.0", optional = true}
mkdocs-material  = {version = "^8.2.13", optional = true}
mkdocs-material-extensions  = {version = "^1.0.3", optional = true}
mkdocstrings  = {version = "^0.18.1", optional = true}
mkdocstrings-sourcelink = {version = "^0.3.2", optional = true}
{%- if cookiecutter.use_mypy == "y" %}
mypy = {version = "^0.950", optional = true}
{%- endif %}
pip  = {version = "^22.0.4", optional = true}
pre-commit = {version = "^2.18.1", optional = true}
pytest  = {version = "^7.1.2", optional = true}
pytest-cov  = {version = "^3.0.0", optional = true}
toml = {version = "^0.10.2", optional = true}
tox  = {version = "^3.25.0", optional = true}
twine  = {version = "^4.0.0", optional = true}

[tool.poetry.extras]
test = [
    "black",
    "flake8",
    "flake8-docstrings",
    "flake8-typing-imports",
    "isort",
    {%- if cookiecutter.use_mypy == "y" %}
    "mypy",
    {%- endif %}
    "pytest",
    "pytest-cov"
]

dev = [
    "bump2version",
    "pip",
    "pre-commit",
    "toml",
    "tox",
    "twine",
]

docs = [
    "mkdocs",
    "mkdocs-autorefs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocs-material-extension",
    "mkdocstrings",
    "mkdocstrings-sourcelink",
]

{% if cookiecutter.command_line_interface|lower == "click" -%}
[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.package_qualified_name }}.cli:main"

{% endif -%}
[tool.black]
line-length = 119
target-version = [
    "py37",
    "py38",
    "py39",
    "py310"
]
include = "\.pyi?$"
exclude = """
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
"""

[tool.isort]
profile = "black"
line_length = 119
force_grid_wrap = 2
multi_line_output = 3
known_first_party = ["pca"]
atomic = true
include_trailing_comma = true
use_parentheses = true
skip_gitignore = true
src_paths = [
    "{{cookiecutter.package_path}}",
    "tests",
]
skip_glob = [
    "docs/conf.py",
    "*/setup.py",
]

[tool.coverage.run]
source = ["{{cookiecutter.package_path}}"]
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    # Don't complain about type-checking guards:
    "TYPE_CHECKING",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",
]

[tool.pydocstyle]
match_dir = "{{cookiecutter.package_path}}/**"
convention = "{{cookiecutter.docstrings_style}}"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
